margin FIXUP and spacing cleanup

--- a/scss/utilities/mixins/icon-block/_icon-block.scss
+++ b/scss/utilities/mixins/icon-block/_icon-block.scss
@@ -10,27 +10,29 @@
 @mixin icon-block {
   @include padding(1em);
   @include overflow;
+
   display: block;
 
   .decanter-icon-block__img {
     @include media-block-img;
+
     margin-right: modular-scale(2);
   }
 
   .decanter-icon-block__body {
-
     .decanter-icon-block__heading {
-      margin: 0;
       font-size: 1.25em;
       font-weight: 600;
+
+      @include margin(0);
     }
 
     .decanter-icon-block__detail {
-      margin: (.30em null);
+      @include margin(0.3em null);
     }
 
     .decanter-icon-block__link {
-      @include margin(.25em null);
+      @include margin(0.25em null);
     }
   }
 }
